--- a/lib/metrics.yaml
+++ b/lib/metrics.yaml
@@ -44,7 +44,9 @@ dart_code_metrics:
     - prefer-last
     - prefer-moving-to-variable:
         allowed-duplicated-chains: 3
-    - prefer-static-class
+    - prefer-static-class:
+        exclude:
+          - test/**
     - prefer-trailing-comma
 
     # Flutter
