--- a/lib/metrics.yaml
+++ b/lib/metrics.yaml
@@ -44,9 +44,13 @@ dart_code_metrics:
     - prefer-last
     - prefer-moving-to-variable:
         allowed-duplicated-chains: 3
+        exclude:
+          - test/**
+          - integration_test/**
     - prefer-static-class:
         exclude:
           - test/**
+          - integration_test/**
     - prefer-trailing-comma
 
     # Flutter
