--- a/lib/metrics.yaml
+++ b/lib/metrics.yaml
@@ -1,6 +1,6 @@
 dart_code_metrics:
   metrics:
-    cyclomatic-complexity: 15
+    cyclomatic-complexity: 30
     maximum-nesting-level: 7
 
   anti-patterns:
@@ -8,7 +8,6 @@ dart_code_metrics:
 
   rules:
     # Dart
-    # - avoid-banned-imports
     - avoid-cascade-after-if-null
     - avoid-collection-methods-with-unrelated-types
     - avoid-double-slash-imports
@@ -20,6 +19,7 @@ dart_code_metrics:
         acceptable-level: 2
     - avoid-non-ascii-symbols
     - avoid-redundant-async
+    - avoid-substring
     - avoid-unnecessary-conditionals
     - avoid-unnecessary-type-assertions
     - avoid-unnecessary-type-casts
@@ -63,6 +63,7 @@ dart_code_metrics:
     - consistent-update-render-object
     - prefer-const-border-radius
     - prefer-correct-edge-insets-constructor
+    - prefer-define-hero-tag
     - prefer-extracting-callbacks:
         allowed-line-count: 5
     - prefer-single-widget-per-file:
