--- a/lib/package.yaml
+++ b/lib/package.yaml
@@ -2,7 +2,13 @@ include: package:cosee_lints/core.yaml
 
 linter:
   rules:
+    - dangling_library_doc_comments
+    - deprecated_member_use_from_same_package
     - diagnostic_describe_all_properties
+    - library_annotations
+    - library_names
     - package_api_docs
+    - package_prefixed_library_names
     - public_member_api_docs
     - slash_for_doc_comments
+    - unnecessary_library_directive
