--- a/lib/core.yaml
+++ b/lib/core.yaml
@@ -16,10 +16,7 @@ analyzer:
   exclude:
     - lib/**/*.i18n.dart
     - lib/**/*.g.dart
-    - lib/**/*.config.dart
     - lib/generated_plugin_registrant.dart
-    - test/*.config.dart
-    - test/**/*.config.dart
 
 linter:
   rules:
@@ -29,16 +26,20 @@ linter:
     - avoid_empty_else
     - avoid_print
     - avoid_relative_lib_imports
-    - avoid_returning_null_for_future
     - avoid_slow_async_io
     - avoid_type_to_string
     - avoid_types_as_parameter_names
     - avoid_web_libraries_in_flutter
     - cancel_subscriptions
     - close_sinks
+    - collection_methods_unrelated_type
     - comment_references
     - control_flow_in_finally
+    - discarded_futures
     - empty_statements
+    - hash_and_equals
+    - implicit_reopen
+    - invalid_case_patterns
     - iterable_contains_unrelated_type
     - list_remove_unrelated_type
     - literal_only_boolean_expressions
@@ -58,9 +59,10 @@ linter:
     # Style
     - always_declare_return_types
     - always_put_control_body_on_new_line
-    - always_require_non_null_named_parameters
+    - always_put_required_named_parameters_first
     - annotate_overrides
     - avoid_bool_literals_in_conditional_expressions
+    - avoid_catches_without_on_clauses
     - avoid_catching_errors
     - avoid_classes_with_only_static_members
     - avoid_double_and_int_checks
@@ -78,7 +80,6 @@ linter:
     - avoid_redundant_argument_values
     - avoid_renaming_method_parameters
     - avoid_return_types_on_setters
-    - avoid_returning_null
     - avoid_returning_null_for_void
     - avoid_returning_this
     - avoid_setters_without_getters
@@ -92,6 +93,7 @@ linter:
     - camel_case_types
     - cascade_invocations
     - cast_nullable_to_non_nullable
+    - combinators_ordering
     - conditional_uri_does_not_exist
     - constant_identifier_names
     - curly_braces_in_flow_control_structures
@@ -103,9 +105,9 @@ linter:
     - exhaustive_cases
     - file_names
     - implementation_imports
+    - implicit_call_tearoffs
     - join_return_with_assignment
     - leading_newlines_in_multiline_strings
-    - library_names
     - library_prefixes
     - library_private_types_in_public_api
     - lines_longer_than_80_chars
@@ -133,7 +135,6 @@ linter:
     - prefer_const_literals_to_create_immutables
     - prefer_constructors_over_static_methods
     - prefer_contains
-    - prefer_equal_for_default_values
     - prefer_final_fields
     - prefer_final_in_for_each
     - prefer_final_locals
@@ -166,9 +167,11 @@ linter:
     - tighten_type_of_initializing_formals
     - type_annotate_public_apis
     - type_init_formals
+    - type_literal_in_constant_pattern
     - unawaited_futures
     - unnecessary_await_in_return
     - unnecessary_brace_in_string_interps
+    - unnecessary_breaks
     - unnecessary_const
     - unnecessary_constructor_name
     - unnecessary_getters_setters
@@ -188,7 +191,6 @@ linter:
     - unnecessary_this
     - unnecessary_to_list_in_spreads
     - use_colored_box
-    - use_decorated_box
     - use_enums
     - use_full_hex_values_for_flutter_colors
     - use_function_type_syntax_for_parameters
@@ -200,6 +202,7 @@ linter:
     - use_rethrow_when_possible
     - use_setters_to_change_properties
     - use_string_buffers
+    - use_string_in_part_of_directives
     - use_super_parameters
     - use_test_throws_matchers
     - use_to_and_as_if_applicable
