--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,6 +4,8 @@ repository: https://github.com/cosee/cosee_lints
 homepage: https://pub.dev/publishers/cosee.biz/packages
 issue_tracker: https://github.com/cosee/cosee_lints/issues
 version: 0.3.0
+topics:
+  - lints
 
 environment:
   sdk: '>=3.0.0 <4.0.0'
