--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -9,9 +9,17 @@ jobs:
       - uses: actions/checkout@v4
       - uses: subosito/flutter-action@v2.11.0
 
+      - name: Cache dependencies
+        uses: actions/cache@v3
+        id: cache
+        with:
+          path: |
+            .dart_tool/
+          key: ${{ runner.os }}-dependencies-${{ hashFiles('**/pubspec.lock') }}
       - name: Install Dependencies
         run: |
           flutter pub get
           flutter pub global activate pana
+
       - name: Verify Pub Score
         run: ./tool/verify_pub_score.sh
