--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -7,15 +7,21 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+
+      - name: Cache asdf
+        uses: actions/cache@v3
+        id: asdf_cache
+        with:
+          path: ~/.asdf/
+          key: ${{ runner.os }}-${{ hashFiles('**/.tool-versions') }}
       - uses: asdf-vm/actions/install@v3
 
-      - name: Cache dependencies
+      - name: Cache flutter dependencies
         uses: actions/cache@v3
-        id: cache
+        id: flutter_cache
         with:
-          path: |
-            .dart_tool/
-          key: ${{ runner.os }}-dependencies-${{ hashFiles('**/pubspec.lock') }}
+          path: .dart_tool/
+          key: ${{ runner.os }}-${{ hashFiles('**/pubspec.lock') }}
       - name: Install Dependencies
         run: |
           flutter pub get
