--- a/lib/core.yaml
+++ b/lib/core.yaml
@@ -40,12 +40,12 @@ linter:
     - hash_and_equals
     - implicit_reopen
     - invalid_case_patterns
-    - iterable_contains_unrelated_type
-    - list_remove_unrelated_type
     - literal_only_boolean_expressions
     - no_adjacent_strings_in_list
     - no_duplicate_case_values
     - no_logic_in_create_state
+    - no_self_assignments
+    - no_wildcard_variable_uses
     - prefer_void_to_null
     - test_types_in_equals
     - throw_in_finally
@@ -111,9 +111,11 @@ linter:
     - library_prefixes
     - library_private_types_in_public_api
     - lines_longer_than_80_chars
+    - matching_super_parameters
     - missing_whitespace_between_adjacent_strings
     - no_leading_underscores_for_library_prefixes
     - no_leading_underscores_for_local_identifiers
+    - no_literal_bool_comparisons
     - no_runtimeType_toString
     - non_constant_identifier_names
     - noop_primitive_operations
