--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,9 +3,9 @@ description: Lint rules and metrics for Dart and Flutter used internally at cose
 repository: https://github.com/cosee/cosee_lints
 homepage: https://pub.dev/publishers/cosee.biz/packages
 issue_tracker: https://github.com/cosee/cosee_lints/issues
-version: 0.5.0
+version: 0.6.0
 topics:
   - lints
 
 environment:
-  sdk: '>=3.0.0 <4.0.0'
+  sdk: ^3.0.0
