--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -10,20 +10,21 @@ jobs:
 
       - name: Cache asdf
         uses: actions/cache@v4
-        id: asdf_cache
         with:
           path: ~/.asdf/
-          key: ${{ runner.os }}-${{ hashFiles('**/.tool-versions') }}
-      - uses: asdf-vm/actions/install@v3
+          key: ${{ runner.os }}-${{ hashFiles('.tool-versions') }}
+      - name: Install asdf
+        uses: asdf-vm/actions/install@v3
+        # See https://github.com/asdf-vm/actions/issues/445
+        if: steps.cache-asdf.outputs.cache-hit != 'true'
 
       - name: Cache dart dependencies
         uses: actions/cache@v4
-        id: flutter_cache
         with:
           path: |
             .dart_tool/
             ~/.pub-cache/
-          key: ${{ runner.os }}-${{ hashFiles('**/pubspec.lock') }}
+          key: ${{ runner.os }}-${{ hashFiles('pubspec.lock') }}
       - name: Install Dependencies
         run: |
           dart pub get
