--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -12,7 +12,8 @@ jobs:
         uses: actions/cache@v4
         with:
           path: ~/.asdf/
-          key: ${{ runner.os }}-${{ hashFiles('.tool-versions') }}
+          key: ${{ runner.os }}-asdf-${{ hashFiles('.tool-versions') }}
+          restore-keys: ${{ runner.os }}-asdf-
       - name: Install asdf
         uses: asdf-vm/actions/install@v3
         # See https://github.com/asdf-vm/actions/issues/445
@@ -24,7 +25,8 @@ jobs:
           path: |
             .dart_tool/
             ~/.pub-cache/
-          key: ${{ runner.os }}-${{ hashFiles('pubspec.lock') }}
+          key: ${{ runner.os }}-dart-${{ hashFiles('example/pubspec.lock') }}
+          restore-keys: ${{ runner.os }}-dart-
       - name: Install Dependencies
         run: |
           dart pub get
