--- a/lib/core.yaml
+++ b/lib/core.yaml
@@ -61,6 +61,7 @@ linter:
     - always_put_control_body_on_new_line
     - always_put_required_named_parameters_first
     - annotate_overrides
+    - annotate_redeclares
     - avoid_bool_literals_in_conditional_expressions
     - avoid_catches_without_on_clauses
     - avoid_catching_errors
@@ -99,11 +100,13 @@ linter:
     - curly_braces_in_flow_control_structures
     - deprecated_consistency
     - directives_ordering
+    - document_ignores
     - empty_catches
     - empty_constructor_bodies
     - eol_at_end_of_file
     - exhaustive_cases
     - file_names
+    - invalid_runtime_check_with_js_interop_types
     - implementation_imports
     - implicit_call_tearoffs
     - join_return_with_assignment
@@ -170,6 +173,7 @@ linter:
     - type_init_formals
     - type_literal_in_constant_pattern
     - unawaited_futures
+    - unintended_html_in_doc_comment
     - unnecessary_await_in_return
     - unnecessary_brace_in_string_interps
     - unnecessary_breaks
@@ -207,6 +211,7 @@ linter:
     - use_super_parameters
     - use_test_throws_matchers
     - use_to_and_as_if_applicable
+    - use_truncating_division
     - void_checks
 
     # Pub rules
