--- a/lib/package.yaml
+++ b/lib/package.yaml
@@ -7,8 +7,10 @@ linter:
     - diagnostic_describe_all_properties
     - library_annotations
     - library_names
+    - missing_code_block_language_in_doc_comment
     - package_api_docs
     - package_prefixed_library_names
     - public_member_api_docs
     - slash_for_doc_comments
     - unnecessary_library_directive
+    - unnecessary_library_name
