--- a/lib/core.yaml
+++ b/lib/core.yaml
@@ -51,7 +51,6 @@ linter:
     - throw_in_finally
     - unnecessary_statements
     - unrelated_type_equality_checks
-    - unsafe_html
     - use_build_context_synchronously
     - use_key_in_widget_constructors
     - valid_regexps
@@ -75,7 +74,6 @@ linter:
     - avoid_init_to_null
     - avoid_js_rounded_ints
     - avoid_multiple_declarations_per_line
-    - avoid_null_checks_in_equality_operators
     - avoid_positional_boolean_parameters
     - avoid_private_typedef_functions
     - avoid_redundant_argument_values
@@ -168,6 +166,7 @@ linter:
     - sort_child_properties_last
     - sort_constructors_first
     - sort_unnamed_constructors_first
+    - strict_top_level_inference
     - tighten_type_of_initializing_formals
     - type_annotate_public_apis
     - type_init_formals
@@ -195,6 +194,7 @@ linter:
     - unnecessary_string_interpolations
     - unnecessary_this
     - unnecessary_to_list_in_spreads
+    - unnecessary_underscores
     - use_colored_box
     - use_enums
     - use_full_hex_values_for_flutter_colors
