Add `switch_on_type` and `unnecessary_unawaited` rules

--- a/lib/core.yaml
+++ b/lib/core.yaml
@@ -47,6 +47,7 @@ linter:
     - no_self_assignments
     - no_wildcard_variable_uses
     - prefer_void_to_null
+    - switch_on_type
     - test_types_in_equals
     - throw_in_finally
     - unnecessary_statements
@@ -194,6 +195,7 @@ linter:
     - unnecessary_string_interpolations
     - unnecessary_this
     - unnecessary_to_list_in_spreads
+    - unnecessary_unawaited
     - unnecessary_underscores
     - use_colored_box
     - use_enums
